# Raytracer

./: CMakeLists.txt  Makefile  config.cfg  output.ppm  raytracer
doc/: doc.css  doc.html
scenes/: config1.cfg  config2.cfg
screenshots/: output1.ppm
src/: Camera.cpp  Camera.hpp  Ray.cpp  Ray.hpp  main.cpp
src/Builder/: Builder.cpp  Builder.hpp
src/Materials/: Flat.hpp  IMaterials.hpp  Metal.hpp
src/Primitives/: IPrimitive.hpp  PrimitiveList.hpp  PrimitiveManager.cpp  PrimitiveManager.hpp  Vector3D.cpp  Vector3D.hpp
src/Primitives/Cube/: Cube.cpp  Cube.hpp
src/Primitives/Plane/: Plane.cpp  Plane.hpp
src/Primitives/Sphere/: Sphere.cpp  Sphere.hpp
src/tools/: Error.cpp  Error.hpp  dlManager.cpp  dlManager.hpp
